# harvard-cs50x-2024

./: .gitignore  CMakeLists.txt  README.md
src/week_0/: 01_scratch_lecture_notes.md  pset0_solution.md
src/week_0/problem_set_0/: Arkanoid_CS50.sb3
src/week_0_scratch/notes/: 01_scratch_lecture_notes.md
src/week_1/: 01_c_lecture_notes.md  02_shorts_data_types.md  03_shorts_operators.md  04_shorts_conditional_statements.md  05_shorts_loops.md  07_shorts_magic_numbers.md  calculator.c  hello.c  mario.c  meow.c
src/week_1/additional_practice/: debug.c
src/week_1/notes/: 01_c_lecture_notes.md  03_shorts_operators.md  04_shorts_conditional_statements.md  08_week_1_c_sections.md
src/week_1/notes/src/: calculator.c  hello_with_name.c  mario.c
src/week_1/prime/: prime.c
src/week_1/problem_set_1/cash/: cash.c
src/week_1/problem_set_1/mario-less/: mario.c
src/week_1/problem_set_1/mario-more/: mario.c
src/week_1/problem_set_1/me/: hello.c
src/week_1/src/: agree.c  compare.c
src/week_10_cybersecurity/notes/: 01_cybersecurity_notes.md
src/week_1_c/additional_practice/debug/: debug.c
src/week_1_c/additional_practice/half/: half.c
src/week_1_c/additional_practice/prime/: prime.c
src/week_1_c/notes/: 01_c_lecture_notes.md  02_shorts_data_types.md  06_shorts_command_line.md  08_week_1_c_section.md
src/week_1_c/notes/src/: meow.c
src/week_1_c/problem_set_1/credit/: credit.c  credit_2.c
src/week_1_c/problem_set_1/world/: hello.c
src/week_2/additional_practice/: hours.c  no-vowels_2.c  password.c
src/week_2/notes/: 01_arrays_lecture_notes.md  04_shorts_debugging.md  05_shorts_arrays.md  07_week_2_arrays_section.md
src/week_2/problem_set_2/: caesar.c  readability.c  scrabble.c
src/week_2_arrays/additional_practice/: no-vowels.c
src/week_2_arrays/notes/: 01_arrays_lecture_notes.md  02_shorts_functions.md  03_shorts_variables_and_scope.md  05_shorts_arrays.md  06_shorts_command_line_arguments.md
src/week_2_arrays/problem_set_2/: substitution.c
src/week_3_algorithms/additional_practice/: atoi.c  max.c  snackbar.c
src/week_3_algorithms/additional_practice/temps/: temps_bubble.c  temps_insertion.c  temps_selection.c
src/week_3_algorithms/notes/: 01_algorithms_lecture_notes.md  02_shorts_linear_search.md  03_shorts_binary_search.md  04_shorts_bubble_sort.md  05_shorts_selection_sort.md  06_shorts_recursion.md  07_shorts_merge_sort.md  08_week_3_algorithms_section.md
src/week_3_algorithms/notes/src/: factorial.c  iteration.c  phonebook.c  phonebook_1.c  phonebook_2.c  recursion.c  search.c  search_candidate.c  search_string.c
src/week_3_algorithms/problem_set_3/: plurality.c  runoff.c  sort.txt  tideman.c
src/week_4_memory/additional_practice/bottomup/: bottomup.c
src/week_4_memory/additional_practice/license/: license.c
src/week_4_memory/notes/: 01_memory_lecture_notes.md  02_shorts_hexadecimal.md  03_shorts_pointers.md  04_shorts_defining_custom_types.md  05_shorts_dynamic_memory_allocation.md  06_shorts_call_stacks.md  07_shorts_file_pointers.md  08_week_4_memory_section.md
src/week_4_memory/notes/src/: addresses.c  cp.c  memory.c  pdf.c  phonebook.c  swap.c  w4_compare.c
src/week_4_memory/problem_set_4/filter-less/: helpers.c
src/week_4_memory/problem_set_4/filter-more/: helpers.c
src/week_4_memory/problem_set_4/recover/: recover.c
src/week_5_data_structures/additional_practice/: trie.c
src/week_5_data_structures/additional_practice/trie/: trie.c
src/week_5_data_structures/notes/: 01_data_structures_lecture_notes.md  02_shorts_data_structures.md  03_shorts_structures.md  04_shorts_singly_linked_lists.md  05_shorts_doubly_linked_lists.md  06_shorts_hash_tables.md  07_shorts_tries.md  08_shorts_queues.md  09_shorts_stacks.md  10_week_5_data_structures_section.md
src/week_5_data_structures/problem_set_5/: inheritance.c
src/week_5_data_structures/problem_set_5/speller/: Makefile  dictionary.c
src/week_6_artificial_intelligence/notes/: 01_artificial_intelligence_notes.md
src/week_6_python/additional_practice/: bank_1.py  bank_2.py  figlet.py  jar.py  seven-day-average.py  taqueria.py
src/week_6_python/notes/: 01_python_lecture_notes.md  02_shorts_python.md
src/week_6_python/notes/src/: blur.py  calculator.py  dictionaries.py  edges.py  face_recognition.py  hello_2.py
src/week_6_python/problem_set_6/: dna.py
src/week_6_python/problem_set_6/sentimental-cash/: cash_1.py  cash_2.py
src/week_6_python/problem_set_6/sentimental-credit/: credit.py
src/week_6_python/problem_set_6/sentimental-hello/: hello.py
src/week_6_python/problem_set_6/sentimental-mario-less/: mario.py
src/week_6_python/problem_set_6/sentimental-mario-more/: mario.py
src/week_6_python/problem_set_6/sentimental-readability/: readability.py
src/week_7_sql/additional_practice/: favorites.sql
src/week_7_sql/additional_practice/prophecy/: prophecy.py  schema.sql
src/week_7_sql/notes/: 01_sql_lecture_notes.md  02_shorts_sql.md  03_week_7_sql_section.md
src/week_7_sql/notes/src/: favorites_2.py  favorites_6.py  favorites_9_sql.py
src/week_7_sql/problem_set_7/fiftyville/: answers.txt  log.sql
src/week_7_sql/problem_set_7/movies/: 1.sql  10.sql  11.sql  12.sql  13.sql  2.sql  3.sql  4.sql  5.sql  6.sql  7.sql  8.sql  9.sql
src/week_7_sql/problem_set_7/songs/: 2.sql  3.sql  4.sql  7.sql  8.sql  answers.txt
src/week_8_html_css_javascript/additional_practice/redo/: index.html
src/week_8_html_css_javascript/notes/: 01_html_css_javascript_notes.md  02_shorts_internet_primer.md  03_shorts_ip.md  04_shorts_tcp.md  05_shorts_http.md  06_shorts_html.md  07_shorts_css.md  08_shorts_javascript.md  09_shorts_dom.md  10_week_8_html_css_javascript_section.md
src/week_8_html_css_javascript/notes/src/: autocomplete.html  background.html  biu.html  blink.html  divform.html  geolocation.html  headings.html  hello.html  hello1.html  hello2.html  home.html  image.html  imglink.html  link_1.html  link_2.html  list.html  lists.html  meta0.html  paragraphs_1.html  (+17 more)
src/week_9_flask/notes/: 01_flask_notes.md  02_shorts_flask.md  03_week_9_flask_section.md
(+134 files in other folders)
